# kernel-compare

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  run_benchmark.py
src/impl/: CMakeLists.txt  impl.cpp  impl.hpp
src/module/: CMakeLists.txt  __init__.py  cython_core.pxd  cython_core.pyx  launcher.py  numba_core.py  numpy_core.py  pykokkos_core.py  scipy_core.py
tests/: test_cython.py  test_numba.py  test_numpy.py  test_pykokkos.py  test_scipy.py
