[build-system]
requires = ["scikit-build-core>=0.5", "pyyaml", "cython", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "module"
version = "0.0.1"
maintainers = [{ name = "William Ruys", email = "will.ruys@gmail.com" }]
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["psutil", "pyyaml", "numpy"]

[tool.scikit-build]
minimum-version = "0.5"
build-dir = "build"
wheel.packages = ["src/module"]
wheel.license-files = []
cmake.minimum-version = "3.22.1"
cmake.build-type = "Release"
cmake.verbose = true
ninja.minimum-version = "1.11"

[tool.cython-lint]
ignore = [
    'E504', # break after binary operator
    'E501', # line too long
    "F841", # local variable is assigned to but never used
    "F405", # may be undefined, or defined from star imports: ...
    "W291", # trailing whitespace
    "E116", # unexpected indentation (comment)
    "W293", # blank line contains whitespace
]
